sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:29: error: not found: value b
for (i<-1 to 4){b=true} 
                ^